tests/machine/x/ocaml/sum_builtin.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/sum_builtin.ml", line 38, characters 25-28:
38 |   print_endline (__show (sum [1;2;3]));
                              ^^^
Error: Unbound value sum


Context (around line 38):
  36 | 
  37 | let () =
  38 |   print_endline (__show (sum [1;2;3]));
  39 | 
